fix: fix button overflow issue

--- a/editor-components/intro-section/intro-section11/intro-section11.module.scss
+++ b/editor-components/intro-section/intro-section11/intro-section11.module.scss
@@ -58,12 +58,21 @@
 
       .action-buttons {
         z-index: 2;
-
         display: flex;
         flex-direction: row;
         gap: var(--composer-gap-md);
+        width: 100%;
+        overflow-x: auto;
+        align-items: center;
+
+        &::before,
+        &::after {
+          content: "";
+          margin: auto;
+        }
 
         .button {
+          flex-shrink: 0;
           padding: calc(var(--composer-gap-md) * 1.5) !important;
 
           .button-text,
@@ -95,7 +104,7 @@
       .content {
         .action-buttons {
           .button {
-            padding: calc(var(--composer-gap-xl) / 2) !important;
+             padding: calc(var(--composer-gap-xl) / 2) !important;
             .button-icon,
             .button-text {
               font-size: 1.5rem;
